rule-engine/lib/rule_engine/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement
Rule 1     statement -> expression
Rule 2     statement -> expression COMMENT
Rule 3     object -> object ATTR SYMBOL
Rule 4     object -> object ATTR_SAFE SYMBOL
Rule 5     expression -> object
Rule 6     expression -> expression QMARK expression COLON expression
Rule 7     expression -> expression MOD expression
Rule 8     expression -> expression MUL expression
Rule 9     expression -> expression FDIV expression
Rule 10    expression -> expression TDIV expression
Rule 11    expression -> expression POW expression
Rule 12    expression -> expression ADD expression
Rule 13    expression -> expression SUB expression
Rule 14    expression -> expression BWAND expression
Rule 15    expression -> expression BWOR expression
Rule 16    expression -> expression BWXOR expression
Rule 17    expression -> expression BWLSH expression
Rule 18    expression -> expression BWRSH expression
Rule 19    expression -> expression IN expression
Rule 20    expression -> expression NOT IN expression
Rule 21    expression -> expression EQ expression
Rule 22    expression -> expression NE expression
Rule 23    expression -> expression GT expression
Rule 24    expression -> expression GE expression
Rule 25    expression -> expression LT expression
Rule 26    expression -> expression LE expression
Rule 27    expression -> expression EQ_FZM expression
Rule 28    expression -> expression EQ_FZS expression
Rule 29    expression -> expression NE_FZM expression
Rule 30    expression -> expression NE_FZS expression
Rule 31    expression -> expression AND expression
Rule 32    expression -> expression OR expression
Rule 33    object -> LPAREN expression RPAREN
Rule 34    expression -> NOT expression
Rule 35    object -> SYMBOL
Rule 36    expression -> SUB expression
Rule 37    expression -> TRUE
Rule 38    expression -> FALSE
Rule 39    object -> BYTES
Rule 40    object -> DATETIME
Rule 41    object -> TIMEDELTA
Rule 42    expression -> FLOAT
Rule 43    expression -> FLOAT_NAN
Rule 44    expression -> FLOAT_INF
Rule 45    object -> NULL
Rule 46    object -> LBRACE ary_members RBRACE
Rule 47    object -> LBRACE ary_members COMMA RBRACE
Rule 48    object -> STRING
Rule 49    object -> LBRACKET RBRACKET
Rule 50    object -> LBRACKET ary_members RBRACKET
Rule 51    object -> LBRACKET ary_members COMMA RBRACKET
Rule 52    object -> LBRACKET expression FOR SYMBOL IN expression RBRACKET
Rule 53    object -> LBRACKET expression FOR SYMBOL IN expression IF expression RBRACKET
Rule 54    ary_members -> expression
Rule 55    ary_members -> ary_members COMMA expression
Rule 56    object -> LBRACE RBRACE
Rule 57    object -> LBRACE map_members RBRACE
Rule 58    object -> LBRACE map_members COMMA RBRACE
Rule 59    map_member -> expression COLON expression
Rule 60    map_members -> map_member
Rule 61    map_members -> map_members COMMA map_member
Rule 62    object -> object LBRACKET expression RBRACKET
Rule 63    object -> object LBRACKET COLON RBRACKET
Rule 64    object -> object LBRACKET COLON expression RBRACKET
Rule 65    object -> object LBRACKET expression COLON RBRACKET
Rule 66    object -> object LBRACKET expression COLON expression RBRACKET
Rule 67    object -> expression LPAREN RPAREN
Rule 68    object -> expression LPAREN ary_members RPAREN

Terminals, with rules where they appear

ADD                  : 12
AND                  : 31
ATTR                 : 3
ATTR_SAFE            : 4
BWAND                : 14
BWLSH                : 17
BWOR                 : 15
BWRSH                : 18
BWXOR                : 16
BYTES                : 39
COLON                : 6 59 63 64 65 66
COMMA                : 47 51 55 58 61
COMMENT              : 2
DATETIME             : 40
EQ                   : 21
EQ_FZM               : 27
EQ_FZS               : 28
FALSE                : 38
FDIV                 : 9
FLOAT                : 42
FLOAT_INF            : 44
FLOAT_NAN            : 43
FOR                  : 52 53
GE                   : 24
GT                   : 23
IF                   : 53
IN                   : 19 20 52 53
LBRACE               : 46 47 56 57 58
LBRACKET             : 49 50 51 52 53 62 63 64 65 66
LE                   : 26
LPAREN               : 33 67 68
LT                   : 25
MOD                  : 7
MUL                  : 8
NE                   : 22
NE_FZM               : 29
NE_FZS               : 30
NOT                  : 20 34
NULL                 : 45
OR                   : 32
POW                  : 11
QMARK                : 6
RBRACE               : 46 47 56 57 58
RBRACKET             : 49 50 51 52 53 62 63 64 65 66
RPAREN               : 33 67 68
STRING               : 48
SUB                  : 13 36
SYMBOL               : 3 4 35 52 53
TDIV                 : 10
TIMEDELTA            : 41
TRUE                 : 37
error                : 

Nonterminals, with rules where they appear

ary_members          : 46 47 50 51 55 68
expression           : 1 2 6 6 6 7 7 8 8 9 9 10 10 11 11 12 12 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 34 36 52 52 53 53 53 54 55 59 59 62 64 65 66 66 67 68
map_member           : 60 61
map_members          : 57 58 61
object               : 3 4 5 62 63 64 65 66
statement            : 0

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . expression
    (2) statement -> . expression COMMENT
    (5) expression -> . object
    (6) expression -> . expression QMARK expression COLON expression
    (7) expression -> . expression MOD expression
    (8) expression -> . expression MUL expression
    (9) expression -> . expression FDIV expression
    (10) expression -> . expression TDIV expression
    (11) expression -> . expression POW expression
    (12) expression -> . expression ADD expression
    (13) expression -> . expression SUB expression
    (14) expression -> . expression BWAND expression
    (15) expression -> . expression BWOR expression
    (16) expression -> . expression BWXOR expression
    (17) expression -> . expression BWLSH expression
    (18) expression -> . expression BWRSH expression
    (19) expression -> . expression IN expression
    (20) expression -> . expression NOT IN expression
    (21) expression -> . expression EQ expression
    (22) expression -> . expression NE expression
    (23) expression -> . expression GT expression
    (24) expression -> . expression GE expression
    (25) expression -> . expression LT expression
    (26) expression -> . expression LE expression
    (27) expression -> . expression EQ_FZM expression
    (28) expression -> . expression EQ_FZS expression
    (29) expression -> . expression NE_FZM expression
    (30) expression -> . expression NE_FZS expression
    (31) expression -> . expression AND expression
    (32) expression -> . expression OR expression
    (34) expression -> . NOT expression
    (36) expression -> . SUB expression
    (37) expression -> . TRUE
    (38) expression -> . FALSE
    (42) expression -> . FLOAT
    (43) expression -> . FLOAT_NAN
    (44) expression -> . FLOAT_INF
    (3) object -> . object ATTR SYMBOL
    (4) object -> . object ATTR_SAFE SYMBOL
    (33) object -> . LPAREN expression RPAREN
    (35) object -> . SYMBOL
    (39) object -> . BYTES
    (40) object -> . DATETIME
    (41) object -> . TIMEDELTA
    (45) object -> . NULL
    (46) object -> . LBRACE ary_members RBRACE
    (47) object -> . LBRACE ary_members COMMA RBRACE
    (48) object -> . STRING
    (49) object -> . LBRACKET RBRACKET
    (50) object -> . LBRACKET ary_members RBRACKET
    (51) object -> . LBRACKET ary_members COMMA RBRACKET
    (52) object -> . LBRACKET expression FOR SYMBOL IN expression RBRACKET
    (53) object -> . LBRACKET expression FOR SYMBOL IN expression IF expression RBRACKET
    (56) object -> . LBRACE RBRACE
    (57) object -> . LBRACE map_members RBRACE
    (58) object -> . LBRACE map_members COMMA RBRACE
    (62) object -> . object LBRACKET expression RBRACKET
    (63) object -> . object LBRACKET COLON RBRACKET
    (64) object -> . object LBRACKET COLON expression RBRACKET
    (65) object -> . object LBRACKET expression COLON RBRACKET
    (66) object -> . object LBRACKET expression COLON expression RBRACKET
    (67) object -> . expression LPAREN RPAREN
    (68) object -> . expression LPAREN ary_members RPAREN

    NOT             shift and go to state 5
    SUB             shift and go to state 4
    TRUE            shift and go to state 6
    FALSE           shift and go to state 7
    FLOAT           shift and go to state 8
    FLOAT_NAN       shift and go to state 9
    FLOAT_INF       shift and go to state 10
    LPAREN          shift and go to state 12
    SYMBOL          shift and go to state 11
    BYTES           shift and go to state 13
    DATETIME        shift and go to state 14
    TIMEDELTA       shift and go to state 15
    NULL            shift and go to state 16
    LBRACE          shift and go to state 17
    STRING          shift and go to state 18
    LBRACKET        shift and go to state 19

    statement                      shift and go to state 1
    expression                     shift and go to state 2
    object                         shift and go to state 3

state 1

    (0) S' -> statement .



state 2

    (1) statement -> expression .
    (2) statement -> expression . COMMENT
    (6) expression -> expression . QMARK expression COLON expression
    (7) expression -> expression . MOD expression
    (8) expression -> expression . MUL expression
    (9) expression -> expression . FDIV expression
    (10) expression -> expression . TDIV expression
    (11) expression -> expression . POW expression
    (12) expression -> expression . ADD expression
    (13) expression -> expression . SUB expression
    (14) expression -> expression . BWAND expression
    (15) expression -> expression . BWOR expression
    (16) expression -> expression . BWXOR expression
    (17) expression -> expression . BWLSH expression
    (18) expression -> expression . BWRSH expression
    (19) expression -> expression . IN expression
    (20) expression -> expression . NOT IN expression
    (21) expression -> expression . EQ expression
    (22) expression -> expression . NE expression
    (23) expression -> expression . GT expression
    (24) expression -> expression . GE expression
    (25) expression -> expression . LT expression
    (26) expression -> expression . LE expression
    (27) expression -> expression . EQ_FZM expression
    (28) expression -> expression . EQ_FZS expression
    (29) expression -> expression . NE_FZM expression
    (30) expression -> expression . NE_FZS expression
    (31) expression -> expression . AND expression
    (32) expression -> expression . OR expression
    (67) object -> expression . LPAREN RPAREN
    (68) object -> expression . LPAREN ary_members RPAREN

    $end            reduce using rule 1 (statement -> expression .)
    COMMENT         shift and go to state 20
    QMARK           shift and go to state 21
    MOD             shift and go to state 22
    MUL             shift and go to state 23
    FDIV            shift and go to state 24
    TDIV            shift and go to state 25
    POW             shift and go to state 26
    ADD             shift and go to state 27
    SUB             shift and go to state 28
    BWAND           shift and go to state 29
    BWOR            shift and go to state 30
    BWXOR           shift and go to state 31
    BWLSH           shift and go to state 32
    BWRSH           shift and go to state 33
    IN              shift and go to state 34
    NOT             shift and go to state 35
    EQ              shift and go to state 36
    NE              shift and go to state 37
    GT              shift and go to state 38
    GE              shift and go to state 39
    LT              shift and go to state 40
    LE              shift and go to state 41
    EQ_FZM          shift and go to state 42
    EQ_FZS          shift and go to state 43
    NE_FZM          shift and go to state 44
    NE_FZS          shift and go to state 45
    AND             shift and go to state 46
    OR              shift and go to state 47
    LPAREN          shift and go to state 48


state 3

    (5) expression -> object .
    (3) object -> object . ATTR SYMBOL
    (4) object -> object . ATTR_SAFE SYMBOL
    (62) object -> object . LBRACKET expression RBRACKET
    (63) object -> object . LBRACKET COLON RBRACKET
    (64) object -> object . LBRACKET COLON expression RBRACKET
    (65) object -> object . LBRACKET expression COLON RBRACKET
    (66) object -> object . LBRACKET expression COLON expression RBRACKET

    COMMENT         reduce using rule 5 (expression -> object .)
    QMARK           reduce using rule 5 (expression -> object .)
    MOD             reduce using rule 5 (expression -> object .)
    MUL             reduce using rule 5 (expression -> object .)
    FDIV            reduce using rule 5 (expression -> object .)
    TDIV            reduce using rule 5 (expression -> object .)
    POW             reduce using rule 5 (expression -> object .)
    ADD             reduce using rule 5 (expression -> object .)
    SUB             reduce using rule 5 (expression -> object .)
    BWAND           reduce using rule 5 (expression -> object .)
    BWOR            reduce using rule 5 (expression -> object .)
    BWXOR           reduce using rule 5 (expression -> object .)
    BWLSH           reduce using rule 5 (expression -> object .)
    BWRSH           reduce using rule 5 (expression -> object .)
    IN              reduce using rule 5 (expression -> object .)
    NOT             reduce using rule 5 (expression -> object .)
    EQ              reduce using rule 5 (expression -> object .)
    NE              reduce using rule 5 (expression -> object .)
    GT              reduce using rule 5 (expression -> object .)
    GE              reduce using rule 5 (expression -> object .)
    LT              reduce using rule 5 (expression -> object .)
    LE              reduce using rule 5 (expression -> object .)
    EQ_FZM          reduce using rule 5 (expression -> object .)
    EQ_FZS          reduce using rule 5 (expression -> object .)
    NE_FZM          reduce using rule 5 (expression -> object .)
    NE_FZS          reduce using rule 5 (expression -> object .)
    AND             reduce using rule 5 (expression -> object .)
    OR              reduce using rule 5 (expression -> object .)
    LPAREN          reduce using rule 5 (expression -> object .)
    $end            reduce using rule 5 (expression -> object .)
    RPAREN          reduce using rule 5 (expression -> object .)
    COLON           reduce using rule 5 (expression -> object .)
    RBRACE          reduce using rule 5 (expression -> object .)
    COMMA           reduce using rule 5 (expression -> object .)
    FOR             reduce using rule 5 (expression -> object .)
    RBRACKET        reduce using rule 5 (expression -> object .)
    IF              reduce using rule 5 (expression -> object .)
    ATTR            shift and go to state 49
    ATTR_SAFE       shift and go to state 50
    LBRACKET        shift and go to state 51


state 4

    (36) expression -> SUB . expression
    (5) expression -> . object
    (6) expression -> . expression QMARK expression COLON expression
    (7) expression -> . expression MOD expression
    (8) expression -> . expression MUL expression
    (9) expression -> . expression FDIV expression
    (10) expression -> . expression TDIV expression
    (11) expression -> . expression POW expression
    (12) expression -> . expression ADD expression
    (13) expression -> . expression SUB expression
    (14) expression -> . expression BWAND expression
    (15) expression -> . expression BWOR expression
    (16) expression -> . expression BWXOR expression
    (17) expression -> . expression BWLSH expression
    (18) expression -> . expression BWRSH expression
    (19) expression -> . expression IN expression
    (20) expression -> . expression NOT IN expression
    (21) expression -> . expression EQ expression
    (22) expression -> . expression NE expression
    (23) expression -> . expression GT expression
    (24) expression -> . expression GE expression
    (25) expression -> . expression LT expression
    (26) expression -> . expression LE expression
    (27) expression -> . expression EQ_FZM expression
    (28) expression -> . expression EQ_FZS expression
    (29) expression -> . expression NE_FZM expression
    (30) expression -> . expression NE_FZS expression
    (31) expression -> . expression AND expression
    (32) expression -> . expression OR expression
    (34) expression -> . NOT expression
    (36) expression -> . SUB expression
    (37) expression -> . TRUE
    (38) expression -> . FALSE
    (42) expression -> . FLOAT
    (43) expression -> . FLOAT_NAN
    (44) expression -> . FLOAT_INF
    (3) object -> . object ATTR SYMBOL
    (4) object -> . object ATTR_SAFE SYMBOL
    (33) object -> . LPAREN expression RPAREN
    (35) object -> . SYMBOL
    (39) object -> . BYTES
    (40) object -> . DATETIME
    (41) object -> . TIMEDELTA
    (45) object -> . NULL
    (46) object -> . LBRACE ary_members RBRACE
    (47) object -> . LBRACE ary_members COMMA RBRACE
    (48) object -> . STRING
    (49) object -> . LBRACKET RBRACKET
    (50) object -> . LBRACKET ary_members RBRACKET
    (51) object -> . LBRACKET ary_members COMMA RBRACKET
    (52) object -> . LBRACKET expression FOR SYMBOL IN expression RBRACKET
    (53) object -> . LBRACKET expression FOR SYMBOL IN expression IF expression RBRACKET
    (56) object -> . LBRACE RBRACE
    (57) object -> . LBRACE map_members RBRACE
    (58) object -> . LBRACE map_members COMMA RBRACE
    (62) object -> . object LBRACKET expression RBRACKET
    (63) object -> . object LBRACKET COLON RBRACKET
    (64) object -> . object LBRACKET COLON expression RBRACKET
    (65) object -> . object LBRACKET expression COLON RBRACKET
    (66) object -> . object LBRACKET expression COLON expression RBRACKET
    (67) object -> . expression LPAREN RPAREN
    (68) object -> . expression LPAREN ary_members RPAREN

    NOT             shift and go to state 5
    SUB             shift and go to state 4
    TRUE            shift and go to state 6
    FALSE           shift and go to state 7
    FLOAT           shift and go to state 8
    FLOAT_NAN       shift and go to state 9
    FLOAT_INF       shift and go to state 10
    LPAREN          shift and go to state 12
    SYMBOL          shift and go to state 11
    BYTES           shift and go to state 13
    DATETIME        shift and go to state 14
    TIMEDELTA       shift and go to state 15
    NULL            shift and go to state 16
    LBRACE          shift and go to state 17
    STRING          shift and go to state 18
    LBRACKET        shift and go to state 19

    expression                     shift and go to state 52
    object                         shift and go to state 3

state 5

    (34) expression -> NOT . expression
    (5) expression -> . object
    (6) expression -> . expression QMARK expression COLON expression
    (7) expression -> . expression MOD expression
    (8) expression -> . expression MUL expression
    (9) expression -> . expression FDIV expression
    (10) expression -> . expression TDIV expression
    (11) expression -> . expression POW expression
    (12) expression -> . expression ADD expression
    (13) expression -> . expression SUB expression
    (14) expression -> . expression BWAND expression
    (15) expression -> . expression BWOR expression
    (16) expression -> . expression BWXOR expression
    (17) expression -> . expression BWLSH expression
    (18) expression -> . expression BWRSH expression
    (19) expression -> . expression IN expression
    (20) expression -> . expression NOT IN expression
    (21) expression -> . expression EQ expression
    (22) expression -> . expression NE expression
    (23) expression -> . expression GT expression
    (24) expression -> . expression GE expression
    (25) expression -> . expression LT expression
    (26) expression -> . expression LE expression
    (27) expression -> . expression EQ_FZM expression
    (28) expression -> . expression EQ_FZS expression
    (29) expression -> . expression NE_FZM expression
    (30) expression -> . expression NE_FZS expression
    (31) expression -> . expression AND expression
    (32) expression -> . expression OR expression
    (34) expression -> . NOT expression
    (36) expression -> . SUB expression
    (37) expression -> . TRUE
    (38) expression -> . FALSE
    (42) expression -> . FLOAT
    (43) expression -> . FLOAT_NAN
    (44) expression -> . FLOAT_INF
    (3) object -> . object ATTR SYMBOL
    (4) object -> . object ATTR_SAFE SYMBOL
    (33) object -> . LPAREN expression RPAREN
    (35) object -> . SYMBOL
    (39) object -> . BYTES
    (40) object -> . DATETIME
    (41) object -> . TIMEDELTA
    (45) object -> . NULL
    (46) object -> . LBRACE ary_members RBRACE
    (47) object -> . LBRACE ary_members COMMA RBRACE
    (48) object -> . STRING
    (49) object -> . LBRACKET RBRACKET
    (50) object -> . LBRACKET ary_members RBRACKET
    (51) object -> . LBRACKET ary_members COMMA RBRACKET
    (52) object -> . LBRACKET expression FOR SYMBOL IN expression RBRACKET
    (53) object -> . LBRACKET expression FOR SYMBOL IN expression IF expression RBRACKET
    (56) object -> . LBRACE RBRACE
    (57) object -> . LBRACE map_members RBRACE
    (58) object -> . LBRACE map_members COMMA RBRACE
    (62) object -> . object LBRACKET expression RBRACKET
    (63) object -> . object LBRACKET COLON RBRACKET
    (64) object -> . object LBRACKET COLON expression RBRACKET
    (65) object -> . object LBRACKET expression COLON RBRACKET
    (66) object -> . object LBRACKET expression COLON expression RBRACKET
    (67) object -> . expression LPAREN RPAREN
    (68) object -> . expression LPAREN ary_members RPAREN

    NOT             shift and go to state 5
    SUB             shift and go to state 4
    TRUE            shift and go to state 6
    FALSE           shift and go to state 7
    FLOAT           shift and go to state 8
    FLOAT_NAN       shift and go to state 9
    FLOAT_INF       shift and go to state 10
    LPAREN          shift and go to state 12
    SYMBOL          shift and go to state 11
    BYTES           shift and go to state 13
    DATETIME        shift and go to state 14
    TIMEDELTA       shift and go to state 15
    NULL            shift and go to state 16
    LBRACE          shift and go to state 17
    STRING          shift and go to state 18
    LBRACKET        shift and go to state 19

    expression                     shift and go to state 53
    object                         shift and go to state 3

state 6

    (37) expression -> TRUE .

    COMMENT         reduce using rule 37 (expression -> TRUE .)
    QMARK           reduce using rule 37 (expression -> TRUE .)
    MOD             reduce using rule 37 (expression -> TRUE .)
    MUL             reduce using rule 37 (expression -> TRUE .)
    FDIV            reduce using rule 37 (expression -> TRUE .)
    TDIV            reduce using rule 37 (expression -> TRUE .)
    POW             reduce using rule 37 (expression -> TRUE .)
    ADD             reduce using rule 37 (expression -> TRUE .)
    SUB             reduce using rule 37 (expression -> TRUE .)
    BWAND           reduce using rule 37 (expression -> TRUE .)
    BWOR            reduce using rule 37 (expression -> TRUE .)
    BWXOR           reduce using rule 37 (expression -> TRUE .)
    BWLSH           reduce using rule 37 (expression -> TRUE .)
    BWRSH           reduce using rule 37 (expression -> TRUE .)
    IN              reduce using rule 37 (expression -> TRUE .)
    NOT             reduce using rule 37 (expression -> TRUE .)
    EQ              reduce using rule 37 (expression -> TRUE .)
    NE              reduce using rule 37 (expression -> TRUE .)
    GT              reduce using rule 37 (expression -> TRUE .)
    GE              reduce using rule 37 (expression -> TRUE .)
    LT              reduce using rule 37 (expression -> TRUE .)
    LE              reduce using rule 37 (expression -> TRUE .)
    EQ_FZM          reduce using rule 37 (expression -> TRUE .)
    EQ_FZS          reduce using rule 37 (expression -> TRUE .)
    NE_FZM          reduce using rule 37 (expression -> TRUE .)
    NE_FZS          reduce using rule 37 (expression -> TRUE .)
    AND             reduce using rule 37 (expression -> TRUE .)
    OR              reduce using rule 37 (expression -> TRUE .)
    LPAREN          reduce using rule 37 (expression -> TRUE .)
    $end            reduce using rule 37 (expression -> TRUE .)
    RPAREN          reduce using rule 37 (expression -> TRUE .)
    COLON           reduce using rule 37 (expression -> TRUE .)
    RBRACE          reduce using rule 37 (expression -> TRUE .)
    COMMA           reduce using rule 37 (expression -> TRUE .)
    FOR             reduce using rule 37 (expression -> TRUE .)
    RBRACKET        reduce using rule 37 (expression -> TRUE .)
    IF              reduce using rule 37 (expression -> TRUE .)


state 7

    (38) expression -> FALSE .

    COMMENT         reduce using rule 38 (expression -> FALSE .)
    QMARK           reduce using rule 38 (expression -> FALSE .)
    MOD             reduce using rule 38 (expression -> FALSE .)
    MUL             reduce using rule 38 (expression -> FALSE .)
    FDIV            reduce using rule 38 (expression -> FALSE .)
    TDIV            reduce using rule 38 (expression -> FALSE .)
    POW             reduce using rule 38 (expression -> FALSE .)
    ADD             reduce using rule 38 (expression -> FALSE .)
    SUB             reduce using rule 38 (expression -> FALSE .)
    BWAND           reduce using rule 38 (expression -> FALSE .)
    BWOR            reduce using rule 38 (expression -> FALSE .)
    BWXOR           reduce using rule 38 (expression -> FALSE .)
    BWLSH           reduce using rule 38 (expression -> FALSE .)
    BWRSH           reduce using rule 38 (expression -> FALSE .)
    IN              reduce using rule 38 (expression -> FALSE .)
    NOT             reduce using rule 38 (expression -> FALSE .)
    EQ              reduce using rule 38 (expression -> FALSE .)
    NE              reduce using rule 38 (expression -> FALSE .)
    GT              reduce using rule 38 (expression -> FALSE .)
    GE              reduce using rule 38 (expression -> FALSE .)
    LT              reduce using rule 38 (expression -> FALSE .)
    LE              reduce using rule 38 (expression -> FALSE .)
    EQ_FZM          reduce using rule 38 (expression -> FALSE .)
    EQ_FZS          reduce using rule 38 (expression -> FALSE .)
    NE_FZM          reduce using rule 38 (expression -> FALSE .)
    NE_FZS          reduce using rule 38 (expression -> FALSE .)
    AND             reduce using rule 38 (expression -> FALSE .)
    OR              reduce using rule 38 (expression -> FALSE .)
    LPAREN          reduce using rule 38 (expression -> FALSE .)
    $end            reduce using rule 38 (expression -> FALSE .)
    RPAREN          reduce using rule 38 (expression -> FALSE .)
    COLON           reduce using rule 38 (expression -> FALSE .)
    RBRACE          reduce using rule 38 (expression -> FALSE .)
    COMMA           reduce using rule 38 (expression -> FALSE .)
    FOR             reduce using rule 38 (expression -> FALSE .)
    RBRACKET        reduce using rule 38 (expression -> FALSE .)
    IF              reduce using rule 38 (expression -> FALSE .)


state 8

    (42) expression -> FLOAT .

    COMMENT         reduce using rule 42 (expression -> FLOAT .)
    QMARK           reduce using rule 42 (expression -> FLOAT .)
    MOD             reduce using rule 42 (expression -> FLOAT .)
    MUL             reduce using rule 42 (expression -> FLOAT .)
    FDIV            reduce using rule 42 (expression -> FLOAT .)
    TDIV            reduce using rule 42 (expression -> FLOAT .)
    POW             reduce using rule 42 (expression -> FLOAT .)
    ADD             reduce using rule 42 (expression -> FLOAT .)
    SUB             reduce using rule 42 (expression -> FLOAT .)
    BWAND           reduce using rule 42 (expression -> FLOAT .)
    BWOR            reduce using rule 42 (expression -> FLOAT .)
    BWXOR           reduce using rule 42 (expression -> FLOAT .)
    BWLSH           reduce using rule 42 (expression -> FLOAT .)
    BWRSH           reduce using rule 42 (expression -> FLOAT .)
    IN              reduce using rule 42 (expression -> FLOAT .)
    NOT             reduce using rule 42 (expression -> FLOAT .)
    EQ              reduce using rule 42 (expression -> FLOAT .)
    NE              reduce using rule 42 (expression -> FLOAT .)
    GT              reduce using rule 42 (expression -> FLOAT .)
    GE              reduce using rule 42 (expression -> FLOAT .)
    LT              reduce using rule 42 (expression -> FLOAT .)
    LE              reduce using rule 42 (expression -> FLOAT .)
    EQ_FZM          reduce using rule 42 (expression -> FLOAT .)
    EQ_FZS          reduce using rule 42 (expression -> FLOAT .)
    NE_FZM          reduce using rule 42 (expression -> FLOAT .)
    NE_FZS          reduce using rule 42 (expression -> FLOAT .)
    AND             reduce using rule 42 (expression -> FLOAT .)
    OR              reduce using rule 42 (expression -> FLOAT .)
    LPAREN          reduce using rule 42 (expression -> FLOAT .)
    $end            reduce using rule 42 (expression -> FLOAT .)
    RPAREN          reduce using rule 42 (expression -> FLOAT .)
    COLON           reduce using rule 42 (expression -> FLOAT .)
    RBRACE          reduce using rule 42 (expression -> FLOAT .)
    COMMA           reduce using rule 42 (expression -> FLOAT .)
    FOR             reduce using rule 42 (expression -> FLOAT .)
    RBRACKET        reduce using rule 42 (expression -> FLOAT .)
    IF              reduce using rule 42 (expression -> FLOAT .)


state 9

    (43) expression -> FLOAT_NAN .

    COMMENT         reduce using rule 43 (expression -> FLOAT_NAN .)
    QMARK           reduce using rule 43 (expression -> FLOAT_NAN .)
    MOD             reduce using rule 43 (expression -> FLOAT_NAN .)
    MUL             reduce using rule 43 (expression -> FLOAT_NAN .)
    FDIV            reduce using rule 43 (expression -> FLOAT_NAN .)
    TDIV            reduce using rule 43 (expression -> FLOAT_NAN .)
    POW             reduce using rule 43 (expression -> FLOAT_NAN .)
    ADD             reduce using rule 43 (expression -> FLOAT_NAN .)
    SUB             reduce using rule 43 (expression -> FLOAT_NAN .)
    BWAND           reduce using rule 43 (expression -> FLOAT_NAN .)
    BWOR            reduce using rule 43 (expression -> FLOAT_NAN .)
    BWXOR           reduce using rule 43 (expression -> FLOAT_NAN .)
    BWLSH           reduce using rule 43 (expression -> FLOAT_NAN .)
    BWRSH           reduce using rule 43 (expression -> FLOAT_NAN .)
    IN              reduce using rule 43 (expression -> FLOAT_NAN .)
    NOT             reduce using rule 43 (expression -> FLOAT_NAN .)
    EQ              reduce using rule 43 (expression -> FLOAT_NAN .)
    NE              reduce using rule 43 (expression -> FLOAT_NAN .)
    GT              reduce using rule 43 (expression -> FLOAT_NAN .)
    GE              reduce using rule 43 (expression -> FLOAT_NAN .)
    LT              reduce using rule 43 (expression -> FLOAT_NAN .)
    LE              reduce using rule 43 (expression -> FLOAT_NAN .)
    EQ_FZM          reduce using rule 43 (expression -> FLOAT_NAN .)
    EQ_FZS          reduce using rule 43 (expression -> FLOAT_NAN .)
    NE_FZM          reduce using rule 43 (expression -> FLOAT_NAN .)
    NE_FZS          reduce using rule 43 (expression -> FLOAT_NAN .)
    AND             reduce using rule 43 (expression -> FLOAT_NAN .)
    OR              reduce using rule 43 (expression -> FLOAT_NAN .)
    LPAREN          reduce using rule 43 (expression -> FLOAT_NAN .)
    $end            reduce using rule 43 (expression -> FLOAT_NAN .)
    RPAREN          reduce using rule 43 (expression -> FLOAT_NAN .)
    COLON           reduce using rule 43 (expression -> FLOAT_NAN .)
    RBRACE          reduce using rule 43 (expression -> FLOAT_NAN .)
    COMMA           reduce using rule 43 (expression -> FLOAT_NAN .)
    FOR             reduce using rule 43 (expression -> FLOAT_NAN .)
    RBRACKET        reduce using rule 43 (expression -> FLOAT_NAN .)
    IF              reduce using rule 43 (expression -> FLOAT_NAN .)


state 10

    (44) expression -> FLOAT_INF .

    COMMENT         reduce using rule 44 (expression -> FLOAT_INF .)
    QMARK           reduce using rule 44 (expression -> FLOAT_INF .)
    MOD             reduce using rule 44 (expression -> FLOAT_INF .)
    MUL             reduce using rule 44 (expression -> FLOAT_INF .)
    FDIV            reduce using rule 44 (expression -> FLOAT_INF .)
    TDIV            reduce using rule 44 (expression -> FLOAT_INF .)
    POW             reduce using rule 44 (expression -> FLOAT_INF .)
    ADD             reduce using rule 44 (expression -> FLOAT_INF .)
    SUB             reduce using rule 44 (expression -> FLOAT_INF .)
    BWAND           reduce using rule 44 (expression -> FLOAT_INF .)
    BWOR            reduce using rule 44 (expression -> FLOAT_INF .)
    BWXOR           reduce using rule 44 (expression -> FLOAT_INF .)
    BWLSH           reduce using rule 44 (expression -> FLOAT_INF .)
    BWRSH           reduce using rule 44 (expression -> FLOAT_INF .)
    IN              reduce using rule 44 (expression -> FLOAT_INF .)
    NOT             reduce using rule 44 (expression -> FLOAT_INF .)
    EQ              reduce using rule 44 (expression -> FLOAT_INF .)
    NE              reduce using rule 44 (expression -> FLOAT_INF .)
    GT              reduce using rule 44 (expression -> FLOAT_INF .)
    GE              reduce using rule 44 (expression -> FLOAT_INF .)
    LT              reduce using rule 44 (expression -> FLOAT_INF .)
    LE              reduce using rule 44 (expression -> FLOAT_INF .)
    EQ_FZM          reduce using rule 44 (expression -> FLOAT_INF .)
    EQ_FZS          reduce using rule 44 (expression -> FLOAT_INF .)
    NE_FZM          reduce using rule 44 (expression -> FLOAT_INF .)
    NE_FZS          reduce using rule 44 (expression -> FLOAT_INF .)
    AND             reduce using rule 44 (expression -> FLOAT_INF .)
    OR              reduce using rule 44 (expression -> FLOAT_INF .)
    LPAREN          reduce using rule 44 (expression -> FLOAT_INF .)
    $end            reduce using rule 44 (expression -> FLOAT_INF .)
    RPAREN          reduce using rule 44 (expression -> FLOAT_INF .)
    COLON           reduce using rule 44 (expression -> FLOAT_INF .)
    RBRACE          reduce using rule 44 (expression -> FLOAT_INF .)
    COMMA           reduce using rule 44 (expression -> FLOAT_INF .)
    FOR             reduce using rule 44 (expression -> FLOAT_INF .)
    RBRACKET        reduce using rule 44 (expression -> FLOAT_INF .)
    IF              reduce using rule 44 (expression -> FLOAT_INF .)


state 11

    (35) object -> SYMBOL .

    ATTR            reduce using rule 35 (object -> SYMBOL .)
    ATTR_SAFE       reduce using rule 35 (object -> SYMBOL .)
    LBRACKET        reduce using rule 35 (object -> SYMBOL .)
    COMMENT         reduce using rule 35 (object -> SYMBOL .)
    QMARK           reduce using rule 35 (object -> SYMBOL .)
